showing the board and all pieces, working on adding draggable and droppable functionality

--- a/static/index.html
+++ b/static/index.html
@@ -7,13 +7,8 @@
 	<body>
 		<div>
 		</div>
-		<div data-js="board-div">
-			<table id="board" data-js="board">
-
-			</table>
-		</div>
-		<div data-js="pieces-div">
-
+		<div id='board-div' data-js="board-div">
+			
 		</div>
 	</body>
 </html>
