--- a/static/index.html
+++ b/static/index.html
@@ -5,18 +5,24 @@
 		<script data-main="js/main.js" src="js/require.js"></script>
 	</head>
 	<body>
-		<div>
-		</div>
-		<div id='board-div' data-js="board-div">
-			
-		</div>
+		<div id='container'>
+			<div id='header'>
+				Go-Llama Chess!
+			</div>
+			<div id='board-div' data-js="board-div">
+				
+			</div>
 
 
-		<div id="interaction-window">
-			
-		</div>
-		<div id='movelog'>
+			<div id="interaction-window">
+				
+			</div>
+			<div id='movelog'>
 
+			</div>
+			<div id='currentColor'>
+
+			</div>
 		</div>
 	</body>
 </html>
