more jiggery pokery with the css. Also added bootstrap css, which makes things look a bit nicer.

--- a/static/index.html
+++ b/static/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/styles.css" />
 		<script data-main="js/main.js" src="js/require.js"></script>
 	</head>
 	<body>
 		<div id='container'>
 			<div id='header'>
-				Go-Llama Chess!
+				<img class='logo' src="img/llama.png">
+				Go-Llama -  Chess!
 			</div>
 			<div id='board-div' data-js="board-div">
 				
