fixed up some more css and styling

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,9 @@
 				<img class='logo' src="img/llama.png">
 				Go-Llama -  Chess!
 			</div>
+			<div id='currentColor'>
+				A Gopher Gala Project
+			</div>
 			<div id='board-div' data-js="board-div">
 				
 			</div>
@@ -23,9 +26,7 @@
 			<div id='movelog'>
 
 			</div>
-			<div id='currentColor'>
-
-			</div>
+			
 		</div>
 	</body>
 </html>
