Styling updates to interaction window

--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,12 @@
 			<div id='movelog'>
 
 			</div>
+
+			<div id="footer">
+				<div style="padding-top: 0.75em;">
+					Made with love by <a href="https://github.com/kiwih">@kiwih</a> (Hammond Pearce), <a href="https://github.com/chriswiggins">@chriswiggins</a> (Chris Wiggins), <a href="https://github.com/thatguy3692">@thatguy3692</a> (Andrew Rowland), <a href="https://github.com/dionb">@dionb</a> (Dion Bramley)
+				</div>
+			</div>
 			
 		</div>
 	</body>
